--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 	<title>The Publik Library</title>
 
 	<meta content="width=device-width, initial-scale=1" name="viewport" http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<meta name="description" content="This is the archive of Andrew Herzog's work">
+	<meta name="description" content="The Publik Library | A creative accessibility initiative">
 	<link rel="stylesheet" href="css/styles.css" type="text/css" media="all"></link>
 	<link rel="shortcut icon" href="images/favicon.png">
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/rot.js/0.6.0/rot.min.js"></script>
+          
+     <script src="js/animascii.js"></script>
 
 	  <meta name="author"              content="The Publik Library">
 	  <meta property="og:url"          content="publiklibrary.org">
@@ -37,6 +41,10 @@
 </head>
 <body>
 	
+<div id="important-news">
+	<p><span class=""> (*・‿・)ノ⌒*:･ﾟ✧ </span> The next Book Fair will take place 09.08.20. <a href="">RSVP to attend.</a> ✧ﾟ･ﾟ:*⌒ノ(・‿・*)<!-- <svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg> --></p>
+</div>
+
 
 <ul>
 	<!-- row 01 -->
@@ -48,56 +56,86 @@
 </ul>
 
 <div id="toc">
-		<span class="title important-01">Contents</span>
+		<span class="title ">Table of Contents</span>
 		<br><br><br class="none">
-		<sup>000 - The Publik Library?</sup><br>
-		<sup>001 - Book Fair</sup><br>
-		<sup>002 - The Stacks</sup><br>
-		<sup>003 - Book Fair I</sup><br>
+		<!-- <sup> --><a href="#row-01">000 - The Publik Library?</a><br>
+		<!-- <sup> --><a href="#row-01">001 - Book Fair?</a><br>
+		<!-- <sup> --><a href="#row-02">002 - The Stacks</a><br>
+		<!-- <sup> --><a href="#row-02">003 - Book Fair I</a></sup><br>
+		<!-- <sup> --><a href="#row-02">004 - Book Fair II</a></sup><br>
 	</div>
 
 	<!-- row 02 -->
-<ul>
-	<li class="content first none">
+<ul id="row-02">
+	<li class="content first none" >
 		<!-- <span class="title">Notes</span> -->
 		<!-- <br><br><br> -->
 	
 		
 	</li>
 	<li class="content">
-		<span class="important-01 title"><a href="https://drive.google.com/drive/folders/1L8Ojq294HmvmSC-wHrzhYLr_BMIRSceF?usp=sharing" target="_blank">003 - Book Fair I</a></span>
+		<span class="title"><!-- <a href="https://drive.google.com/drive/folders/1L8Ojq294HmvmSC-wHrzhYLr_BMIRSceF?usp=sharing" target="_blank"> -->004 - Book Fair II</a> </span><svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg>
 		<br><br><br>
-		On April 26th, 2020, our first group of speakers at the Book Fair included <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a> - artist & partner at <a href="https://schoooool.com/" target="_blank">School</a>, <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a> - illustrator & art director, <a href="https://high.org/" target="_blank">Kristie Swink Benson</a> - director of communications at the <a href="https://high.org/" target="_blank">High Museum of Art</a>, and </span><a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a> - cofounder & partner at <a href="https://www.playlab.org/" target="_blank">PLAYLAB, INC.</a>
+		<span class="important-01">On September 9th @ 5:30pm EST, the Publik Library kicks off the first of three installments that will make up the Book Fair II.</span> On the evening of the 9th, 16th, and 22nd, the Publik Library welcomes artist, technologist, and educator @ NYU ITP <a href="http://www.ariciano.tv/" target="_blank">Ari Melenciano</a>, photographer and professor @ SCAD <a href="https://www.michaeljamesobrien.com/" target="_blank">Michael O’Brien</a>, and photographer <a href="http://www.camkirkstudios.com/" target="_blank">Cam Kirk</a>, respectively.
+
 		<br><br>
-			<sup>Andrew Herzog</sup><br>
-		<img src="images/bf-01-ah.jpg"/><br>
-			<sup>Simone Noronha</sup><br>
-		<img src="images/bf-01-sn.jpg"/><br>
-			<sup>Kristie Swink Benson</sup><br>
-		<img src="images/bf-01-ksb.jpg"/><br>
-			<sup>Archie Lee Coates IV</sup><br>
-		<img src="images/bf-01-alc.jpg"/><br><br>
+			
+		<img src="images/bf-02.png"/><br>
+		<sup>c/o <a href="http://gfbthree.com/" target="_blank">George F. Baker III</a></sup><br><br>
+		<a href="https://drive.google.com/drive/folders/1L8Ojq294HmvmSC-wHrzhYLr_BMIRSceF?usp=sharing" target="_blank">RSVP to attend</a>	
+		<br><br>			
+	</li>
+	<li class="content" >
+		<span class="title"><!-- <a href="https://drive.google.com/drive/folders/1L8Ojq294HmvmSC-wHrzhYLr_BMIRSceF?usp=sharing" target="_blank"> -->003 - Book Fair I</a></span>
+		<br><br><br>
+		On April 26th, 2020, our first group of speakers at the Book Fair included artist & partner at <a href="https://schoooool.com/" target="_blank">School</a> <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a>, illustrator & art director <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a>, director of communications at the <a href="https://high.org/" target="_blank">High Museum of Art</a> <a href="https://high.org/" target="_blank">Kristie Swink Benson</a>, and cofounder & partner at <a href="https://www.playlab.org/" target="_blank">PLAYLAB, INC.</a> </span><a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a>
+		<br><br>
+			
+		<img src="images/bf-01-ah.jpg"/>
+		<sup>Andrew Herzog</sup><br><br>
+			
+		<img src="images/bf-01-sn.jpg"/>
+		<sup>Simone Noronha</sup><br><br>
+			
+		<img src="images/bf-01-ksb.jpg"/>
+		<sup>Kristie Swink Benson</sup><br><br>
+			
+		<img src="images/bf-01-alc.jpg"/>
+		<sup>Archie Lee Coates IV</sup><br><br>
 		<a href="https://drive.google.com/drive/folders/1L8Ojq294HmvmSC-wHrzhYLr_BMIRSceF?usp=sharing" target="_blank">Watch</a>	
 		<br><br>			
 	</li>
-	<li class="content">
-	 	<span class="title important-01"><a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing" target="_blank" >002 - The Stacks</a></span>
+	<li class="last content">
+	 	<span class="title "><!-- <a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing" target="_blank" > -->002 - The Stacks</a></span>
 		<br><br><br>
 		<span class="important-01">The Stacks is a digital public archive of things recommended by working creatives for anyone to dig through and find inspiration.</span>
 		<br><br>
 		<video playsinline  autoplay loop muted> 
-		  <source src="images/stacks-01.mp4" type="video/mp4">		  
+		  <source src="images/stacks-02.mp4" type="video/mp4">		  
 		</video>
-		<br><br>
+		<sup>Library Card: <a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_" target="_blank">Jocelyn Tsaih</a></sup><br><br>
 		 <span class="important-03">Those things (books, films, videos, art, lectures, places, and people) are organized into cards bearing the names of creatives who’ve filled them.</span>  We hope their content can act as a catalyst for inquiry and learning. The goal is to create an ever-evolving repository of inputs and inspirations that can offer an ever-growing source of insights for young creatives and lifelong students.
 		<br><br> 
 
 		<span class="important-01"><a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing" target="_blank" >Visit The Stacks</a></span>
 
 	</li>
-	<li class="last content" >
+	
+</ul>
+
+<!-- divider -->
+<ul>	
+	<li class="divider" id="row-01"></li>
+</ul>	
+
+
+<!-- row 03 -->
+<ul >
+
+	<li class="first none" ><br><br></li>
+	<li class="content" >
 		
-		<span class="important-01 title">001 - Book Fair</span>
+		<span class="title">001 - Book Fair?</span>
 		<br><br><br>
 		<span class="important-01">The Book Fair <!-- 001 (04.26, 2-6PM EST) --> is a quarterly lecture series where selected contributors to The Stacks talk about the inputs and inspirations that have had a significant impact on their lives and careers.</span>
 		<br><br>
@@ -106,32 +144,21 @@
 		</video>
 		<sup>c/o <a href="http://zuhengyin.com/" target="_blank">Zuheng Yin</a></sup>
 		<br><br>
-		The Book Fair is <span class="important-01">open and free to the public</span>. The virtual nature of these events are partly fueled by the situation we find ourselves in, and partly because using the power of the web helps democratize these talks. <span class="important-03">After the virtual event, the talks will be archived on The Stacks</span> in their respective folders.<!--  On <span class="important-01">April 26th</span>, our first group of speakers will be <a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a> - cofounder & partner at PLAYLAB Inc, <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a> - illustrator & art director, <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a> - artist & partner at School, and <a href="https://high.org/" target="_blank">Kristie Swink Benson</a> - director of communications at the High Museum of Art. -->
+		The Book Fair is <span class="important-01">open and free to the public</span>. The virtual nature of these events are partly fueled by the situation we find ourselves in, and partly because using the power of the web helps democratize these talks. <span class="important-03">After the virtual event, the talks will be archived on The Stacks</span> in their respective folders. On 
 		<br><br> 
-		<!-- <a href="https://hopin.to/events/the-book-fair" target="_blank">RSVP for the Book Fair </a>	 -->
+		
 		<br><br>	
 	</li>
-</ul>
-
-<!-- divider -->
-<ul>	
-	<li class="divider"></li>
-</ul>	
-
-
-<!-- row 03 -->
-<ul>
-	<li class="first none"><br><br></li>
-	<li class="content"><br>
-		<span class="title important-01">000 - The Publik Library?</span>
-		<br><br>
+	<li class="content">
+		<span class="title ">000 - The Publik Library?</span>
+		<br><br><br>
 		The Publik Library is a <span class=" important-01">creative accessibility</span> initiative collaboratively initiated by <a href="http://schoooool.com/" target="_blank">School</a>, <a href="https://educated--guess.com/" target="_blank">Educated Guess</a>, and <a href="http://r-d.info/" target="_blank">Research + Development</a>.<br>
 		<br><br> 
 		<span class=""><a href="https://www.instagram.com/publik.library/" target="_blank">@publik.library</a>
 		
 			<br><br><span class="important-03">the.publik.library@gmail.com</span>
 	</li>
-	<li class="none"><br></li>
+	
 	<li class="last none"><br></li>
 </ul>
 
@@ -145,15 +172,13 @@
 
 </div>
 
-<!-- divider -->
+
 <ul>	
 	<li class="divider"><p id="copyright"> ©(Y)ours 2020</p></li>
 </ul>	
 
 <!-- outside -->
-
-
-
+ 
 
 
 </body>
