--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <img id="bf4" src="images/bf-02-03.png"/>
 <img id="bf5" src="images/bf-02-02.png"/>
 <img id="bf6" src="images/bf-02-05.png"/>
+<img id="bf7" src="images/gfb-01.png"/>
 
 <ul>
 	<!-- row 01 -->
