--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@
 		<span class="important-01">On September 9th @ 5:30pm EST, the Publik Library kicks off the first of three installments that will make up the Book Fair II.</span> On the evening of the 9th, 16th, and 22nd, the Publik Library welcomes artist, technologist, and educator @ NYU ITP <a href="http://www.ariciano.tv/" target="_blank">Ari Melenciano</a>, photographer and professor @ SCAD <a href="https://www.michaeljamesobrien.com/" target="_blank">Michael O’Brien</a>, and photographer <a href="http://www.camkirkstudios.com/" target="_blank">Cam Kirk</a>, respectively.
 
 		<br><br>
-			
-		<img src="images/bf-02.png"/><br>
+		<video playsinline  autoplay loop muted> 
+		  <source src="images/bf-02-01.mp4" type="video/mp4">		  
+		</video>	
+		<!-- <img src="images/bf-02.png"/><br> -->
 		<sup>c/o <a href="http://gfbthree.com/" target="_blank">George F. Baker III</a></sup><br><br>
 		<a href="https://us04web.zoom.us/webinar/register/WN_38vTQ0IQR7aYlB0w2oV_Bg" target="_blank">RSVP to attend</a>	
 		<br><br>			
