--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	<li class="content" id="004">
 		<span class="title"><!-- <a href="https://drive.google.com/drive/folders/1L8Ojq294HmvmSC-wHrzhYLr_BMIRSceF?usp=sharing" target="_blank"> -->004 - Book Fair II</a> </span><svg height="9" width="9" class="blinking"><circle cx="5" cy="5" r="4" fill="red" /></svg>
 		<br><br><br>
-		<span class="important-01">On September 9th @ 5:30pm EST, the Publik Library kicks off the first of three installments that will make up the Book Fair II.</span> On the evening of the 9th, 16th, and 22nd, the Publik Library welcomes artist, technologist, and educator @ NYU ITP <a href="http://www.ariciano.tv/" target="_blank">Ari Melenciano</a>, photographer and professor @ SCAD <a href="https://www.michaeljamesobrien.com/" target="_blank">Michael O’Brien</a>, and photographer <a href="http://www.camkirkstudios.com/" target="_blank">Cam Kirk</a>, respectively.
+		<span class="important-01">On September 8th, 2020, @ 5:30pm EST, the Publik Library kicks off the first of three installments that will make up the Book Fair II.</span> On the evening of the 8th, 16th, and 22nd, the Publik Library welcomes artist, technologist, and educator @ NYU ITP <a href="http://www.ariciano.tv/" target="_blank">Ari Melenciano</a>, photographer and professor @ SCAD <a href="https://www.michaeljamesobrien.com/" target="_blank">Michael O’Brien</a>, and photographer <a href="http://www.camkirkstudios.com/" target="_blank">Cam Kirk</a>, respectively.
 
 		<br><br>
 		<video playsinline  autoplay loop muted> 
